--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,15 @@
 sudo: false
 language: python
 python:
-  - "2.7"
+  - "3.6"
 addons:
   postgresql: "9.4"
 before_script:
   - createdb braingames_db
 install:
-  - pip install tox coveralls
+  - pip install tox
 env:
   - TOX_ENV=flake8
-  - TOX_ENV=docs
   - TOX_ENV=tests
 script:
   - tox -e $TOX_ENV
-after_success:
-  - coveralls
