--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-envlist = tests, flake8, docs
+envlist = tests, flake8
 
 [testenv]
-basepython = python2.7
+basepython = python3.6
 setenv =
     DEBUG=False
     SECRET_KEY='FOO'
@@ -15,14 +15,8 @@ deps =
 commands =
     {toxinidir}/bin/pipstrap.py
     pip install --require-hashes --no-cache-dir -r requirements.txt
-    coverage run manage.py test
+    ./manage.py test
 
 [testenv:flake8]
 deps = flake8
 commands = flake8 braingames
-
-[testenv:docs]
-whitelist_externals = make
-commands =
-    pip install -r docs/requirements.txt
-    make -C docs html
