--- a/requirements.txt
+++ b/requirements.txt
@@ -96,3 +96,6 @@ django-cache-url==1.3.1 \
 django-extensions==1.7.6 \
     --hash=sha256:d5e2b2430293ead08a49a9dd98f8f2dad011bc9409c27986567f45b06c5653ce \
     --hash=sha256:b79abdb0c9a0f6ba61701f299c7605830c4b2a8495d31461ac401d027bab2e10
+six==1.10.0 \
+    --hash=sha256:0ff78c403d9bccf5a425a6d31a12aa6b47f1c21ca4dc2573a7e2f32a97335eb1 \
+    --hash=sha256:105f8d68616f8248e24bf0e9372ef04d3cc10104f1980f54d57b2ce73a5ad56a
