--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ deps =
 commands =
     {toxinidir}/bin/pipstrap.py
     pip install --require-hashes --no-cache-dir -r requirements.txt
+    ./manage.py collectstatic --no-input
     ./manage.py test
 
 [testenv:flake8]
